--- a/read_in.Rmd
+++ b/read_in.Rmd
@@ -11,6 +11,7 @@ knitr::opts_chunk$set(echo = FALSE, options(scipen=999))
 library(httr)
 library(jsonlite)
 library(ggthemes)
+library(rsconnect)
 library(tidyverse)
 ```
 
